Add distribution mode and speed upgrade